--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Tip Calculator</title>  
+  <title>Tips Calculator</title>  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@700;800;900&display=swap">
   <link rel="stylesheet" href="styles.css">
@@ -10,7 +10,7 @@
 <body>
   <div style="height: 90vh" class="d-flex mt-4 justify-content-center align-items-center">
   <div class="container">
-    <h1 class="display-3 text-danger my-4">Tip Calculator</h1>    
+    <h1 class="display-3 text-danger my-4">Tips Calculator</h1>    
 
       <div class="row">
         <div class="col-md-12">
